# C1_Coursework

./: README.md  cython_test.ipynb  environment.yml  pyproject.toml  requirements.txt
docs/: conf.py  dual_autodiff_dual.rst  index.rst
docs/Tutorial/: dual_autodiff.ipynb
dual_autodiff/: README.md  __init__.py  autodiff_tools.py  dual.py  pyproject.toml  requirements.txt  version.py
dual_autodiff/results/: example_diff.ipynb
dual_autodiff/src/dual_autodiff/: version.py
dual_autodiff/tests/: test_autodiff_tools.py
dual_autodiff_package/: pyproject.toml
dual_autodiff_package/dual_autodiff/: __init__.py  version.py
dual_autodiff_x/: README.md  pyproject.toml  setup.py
dual_autodiff_x/docs/: dual_autodiff_dual.rst  index.rst
dual_autodiff_x/docs/Tutorial/: dual_autodiff.ipynb
dual_autodiff_x/src/dual_autodiff_x/: __init__.py  dual.c  dual.pyx  version.py
dual_autodiff_x/tests/: test_autodiff_tools.py
dual_autodiff_x/wheel_contents/dual_autodiff_x/: autodiff_tools.c  dual.c
dual_autodiff_x/wheel_contents/dual_autodiff_x-0.1.0.dist-info/: METADATA  RECORD
dual_autodiff_x/wheelhouse/: dual_autodiff_x-0.1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
report/: main.tex  pyproject.txt  references.bib
results/: example_diff.ipynb
tests/: test_dual.py
