[build-system]
requires = ["setuptools", "wheel", "build","setuptools_scm"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff"
#dynamic = ["version"]
version = "0.1.0"
description = "A Python package for performing automatic differentiation using dual numbers."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Fayzan", email = "fm565@cam.ac.uk" },
]
keywords = ["automatic differentiation" , "forward-mode" , "deep neural networks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

# Runtime dependencies
dependencies = [
    "numpy"
]


#[tool.setuptools_scm]
#write_to = "dual_autodiff/version.py"  # Where to write the dynamic version

[tool.setuptools.packages.find]
where = ["."]
