[build-system]
requires = ["setuptools", "Cython", "wheel", "setuptools_scm", "build"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff_x"
dynamic = ["version"]
description = "A Cython package for performing automatic differentiation using dual numbers."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Fayzan", email = "fm565@cam.ac.uk" },
]
keywords = ["automatic differentiation" , "forward-mode" , "deep neural networks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

# Runtime dependencies
dependencies = [
    "numpy"
]

[tool.setuptools_scm]
write_to = "src/dual_autodiff_x/version.py"  # Where to write the dynamic version

[tool.setuptools]
package-dir = {"" = "src"}