[build-system]
requires = ["setuptools", "Cython", "wheel", "build"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff_x"
version = "0.1.0" 
description = "A Cython package for performing automatic differentiation using dual numbers."
requires-python = ">=3.9"
authors = [
    { name = "Fayzan", email = "fm565@cam.ac.uk" },
]

# Runtime dependencies
dependencies = [
    "numpy"
]

[tool.setuptools]
package-dir = {"" = "src"}